# OS

KP/: report.md
KP/src/: a.c  b.c  c.c
LR_1/: report.md
LR_2/: report.md
LR_2/includes/: helper.h
LR_2/src/: child.cpp  main.cpp
LR_3/: CMakeLists.txt  report.md
LR_3/src/: main.cpp
LR_4/: CMakeLists.txt  report.md
LR_4/includes/: header.h
LR_4/src/: child.cpp  main.cpp
LR_5/: CMakeLists.txt  report.md
LR_5/include/: functions.h  lib.h  version.h.in
LR_5/src/: functions1.c  functions2.c  lib1.cpp  lib2.cpp  main1.cpp  main2.cpp  test1.c  test2.c
LR_6-8/: .gitignore  CMakeLists.txt  report.md
LR_6-8/LROC6/: a.out  main.cpp  node.cpp  topology.h  zmq_f.h
LR_6-8/src/: calculation  calculation_node.cpp  control  control.cpp  main.cpp  node  search.cpp  search.hpp  topology.h  topology.hpp  zmq_f.h  zmq_std.hpp
src/: main.cpp
